--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -1,20 +1,15 @@
 #header{
     background: #154B7D;
+    padding: 36px;
 }
-#headtext{
-    color: aliceblue;
-    align-content: center;
 
+#header img {
+    padding: 36px;
 }
-#searchtitle{
-    align-content: center;
-    align-items: center;
-    align-self: center;
+
+#headerTextColumn h1 {
     text-align: center;
+    color: white;
+    font-weight: bold;
 }
-#h2text{
-    align-content: center;
-    align-items: center;
-    align-self: center;
-    text-align: center;
-}
+
