Rename files for consistency

--- a/frontend/src/components/search/Search.css
+++ b/frontend/src/components/search/Search.css
@@ -22,7 +22,7 @@
     border-radius: 5px;
 }
 
-#searchResultsGroup {
+#searchLocationsGroup {
     max-height: 300px;
     overflow-y: auto;
 }
@@ -40,6 +40,6 @@
     margin: 0;
 }
 
-#noResultsFound {
+#noLocationsFound {
     margin: 0;
 }
