--- a/frontend/src/components/county_wide/CountyWide.css
+++ b/frontend/src/components/county_wide/CountyWide.css
@@ -9,4 +9,24 @@
 
 #cardsContainer {
     margin-top: 1em;
+    text-align: center;
+}
+
+.countyWideCard {
+    width: 30%;
+    margin: 1em;
+}
+
+@media only screen and (max-width: 992px) {
+    .countyWideCard {
+        width: 45%;
+        margin: 1em;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .countyWideCard {
+        width: 100%;
+        margin: 1em;
+    }
 }
