--- a/frontend/src/components/county_wide/CountyWide.css
+++ b/frontend/src/components/county_wide/CountyWide.css
@@ -17,6 +17,15 @@
     margin: 1em;
 }
 
+.countyWideCard a {
+    text-decoration: none !important;
+    color: black;
+}
+
+.countyWideCard:hover {
+    box-shadow: 0px 0px 10px 0px #e5e5ea;
+}
+
 @media only screen and (max-width: 992px) {
     .countyWideCard {
         width: 45%;
