Hide location id from url

--- a/frontend/src/components/search/Search.css
+++ b/frontend/src/components/search/Search.css
@@ -27,6 +27,10 @@
     overflow-y: auto;
 }
 
+.searchLink {
+    text-decoration: none !important;
+}
+
 .searchResult {
     margin: 0;
     text-align: left !important;
