--- a/frontend/src/components/county_wide/CountyWide.css
+++ b/frontend/src/components/county_wide/CountyWide.css
@@ -7,28 +7,48 @@
     text-align: right;
 }
 
+#countyWideFilter {
+    margin: 1em 1em 0 1em;
+}
+
 #cardsContainer {
     margin-top: 1em;
     text-align: center;
 }
 
 .countyWideCard {
-    width: 30%;
-    margin: 1em;
-}
-
-.countyWideCard a {
+    width: 30.1%;
+    margin: 1.1em;
     text-decoration: none !important;
     color: black;
+    height: 200px;
+}
+
+.countyWideCard .card {
+    height: 100%;
 }
 
 .countyWideCard:hover {
     box-shadow: 0px 0px 10px 0px #e5e5ea;
 }
 
+#countyWideNoLocationsFound {
+    box-shadow: 0px 0px 10px 0px #e5e5ea;
+    padding: 1em;
+    width: 100%;
+    margin: 0.25em 1em;
+}
+
+@media only screen and (max-width: 1200px) {
+    .countyWideCard {
+        width: 46.5%;
+        margin: 1em;
+    }
+}
+
 @media only screen and (max-width: 992px) {
     .countyWideCard {
-        width: 45%;
+        width: 45.5%;
         margin: 1em;
     }
 }
