--- a/frontend/src/components/county_wide/CountyWide.css
+++ b/frontend/src/components/county_wide/CountyWide.css
@@ -13,7 +13,6 @@
 
 #cardsContainer {
     margin-top: 1em;
-    text-align: center;
 }
 
 .countyWideCard {
@@ -22,14 +21,36 @@
     text-decoration: none !important;
     color: black;
     height: 200px;
-}
-
-.countyWideCard .card {
-    height: 100%;
-}
-
-.countyWideCard:hover {
+    padding: 2em;
+    border-radius: 5px;
     box-shadow: 0px 0px 10px 0px #e5e5ea;
+    position: relative;
+}
+
+#nameLabel {
+    font-weight: bold;
+}
+
+#addressLabel{
+    color: #8e8e93;
+}
+
+#timeLabelContainer {
+    position: absolute;
+    left: 2em;
+    bottom: 1.5em;
+}
+
+#minutes {
+    display: inline-block;
+    margin-bottom: 0;
+    color: #30d158;
+}
+
+#minutesLabel {
+    display: inline-block;
+    margin-left: 0.4em;
+    margin-bottom: 0;
 }
 
 #countyWideNoLocationsFound {
@@ -37,6 +58,8 @@
     padding: 1em;
     width: 100%;
     margin: 0.25em 1em;
+    border-radius: 5px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 1200px) {
