--- a/frontend/src/components/menu/Menu.css
+++ b/frontend/src/components/menu/Menu.css
@@ -14,6 +14,11 @@
 .nav-link {
     margin-left: 0.5em;
     margin-right: 0.25em;
+    color: white !important;
+}
+
+.nav-link:hover {
+    opacity: 0.5;
 }
 
 #menuDropdownMenu {
