Add auth to dashboard

--- a/frontend/src/components/dashboard/Dashboard.css
+++ b/frontend/src/components/dashboard/Dashboard.css
@@ -31,3 +31,12 @@
   outline: none !important;
   box-shadow: none;
 }
+
+#dashboard-login {
+  margin-top: 3em;
+  max-width: 500px;
+}
+
+.dashboard-location-name {
+  margin: 0;
+}
