--- a/frontend/src/components/dashboard/Dashboard.css
+++ b/frontend/src/components/dashboard/Dashboard.css
@@ -1,19 +1,14 @@
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding: 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  height: calc(100vh - 60px);
+  overflow-y: scroll;
 }
 
 .sidebar-sticky {
   position: sticky;
   top: 0;
   bottom: 0;
-  height: calc(100vh - 76px);
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto;
